# pserver-manager

./: .gitignore  .gitmodules  FRAMEWORK_RECOMMENDATION_INPUT_BUTTONS.md  REFACTORING_REPORT.md  SEARCH_IMPLEMENTATION_REPORT.md  instructions.md  main.py  pyproject.toml  test_combo_styles.py
docs/: extracting-server-ips.md  theme_extension.md
pserver_manager/: config_loader.py  main.py  models.py
pserver_manager/config/: settings.yaml
pserver_manager/controllers/: __init__.py  info_panel_controller.py  server_controller.py  theme_controller.py
pserver_manager/icons/: ICONS.md
pserver_manager/pages/: __init__.py
pserver_manager/services/: __init__.py  cache_service.py  data_fetch_service.py  server_service.py  update_service.py
pserver_manager/themes/: runescape.yaml  wow.yaml
pserver_manager/utils/: __init__.py  account_manager.py  batch_scanner.py  paths.py  qt_background_worker.py  qt_reddit_worker.py  qt_scraper_worker.py  qt_updates_worker.py  reddit_scraper.py  schema_migrations.py  server_ping.py  server_scraper.py  svg_icon_loader.py  updates.py  updates_scraper.py
pserver_manager/widgets/: __init__.py  account_dialog.py  card_style_provider.py  game_sidebar.py  info_panel.py  preferences_dialog.py  reddit_panel.py  reddit_post_card.py  server_data_formatter.py  server_editor.py  server_info_card.py  server_links_widget.py  server_table.py  update_card.py  update_dialog.py
scripts/server_detector/: README.md  USAGE.md  __init__.py  __main__.py  config_parser.py  detector.py  example.py  executor.py  network_monitor.py
(+24 files in other folders)
