[project]
name = "pserver-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qtframework",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "cryptography>=42.0.0",
    "requests>=2.32.0",
]

[tool.uv.workspace]
members = [
    "qtframework",
]

[tool.uv.sources]
qtframework = { workspace = true }
